# pypxml

./: LICENSE  MANIFEST.in  README.md  benchmark.py  pyproject.toml  requirements.txt
cli/: analytics_cli.py  pypxml_cli.py  regularize_cli.py  util.py
doc/: README.md
docs/: DOCUMENTATION.md
docs/api/: PageElement.md  PageXML.md  README.md
docs/cli/: README.md
pypxml/: __init__.py  pageelement.py  pagetype.py  pagexml.py
src/cli/: __init__.py  analytics.py  analytics_cli.py  misc.py  pypxml_cli.py  regularise.py  regularize.py  regularize_cli.py  search_cli.py  stats_cli.py  transformation_cli.py  util.py
src/pypxml/: __init__.py  __version__.py  element.py  page.py  page_element.py  page_schema.py  page_types.py  page_xml.py  pageelement.py  pagelement.py  pageschema.py  pagetype.py  pagetypes.py  pageutil.py  pagexml.py  pxml.py  util.py
src/pypxml/cli/: __init__.py  analytics.py  format.py  regularize.py  util.py
src/pypxml/resources/: __init__.py  schema.json  xml_schema.py  xml_types.py
tests/: conftest.py  test_pageelement.py  test_pageschema.py  test_pagetypes.py  test_pageutil.py  test_pagexml.py  test_pypxml.py
