[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pypxml"
description = "A python library for reading, writing, and modifying PageXML files."
readme = "README.md"
keywords = ["PageXML", "XML", "OCR", "optical character recognition"]
requires-python = ">=3.11"
license = { file = "LICENSE" }
dynamic = ["dependencies", "version"]

authors = [
    { name = "jahtz", email = "jahtz.dev@proton.me" }
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
]

[project.urls]
Repository = "https://github.com/jahtz/pypxml"

[project.optional-dependencies]
cli = ["click >= 8.0", "rich >= 14.0.0"]
dev = ["pytest", "pytest-cov", "mypy", "ruff"]

[project.scripts]
pypxml = "pypxml.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
dependencies = { file = "requirements.txt" }
version = { attr = "pypxml.__version__.__version__" }

[tool.setuptools.package-data]
pypxml = ["py.typed"]
