[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pypxml"
description = "A python library for reading, writing, and modifying PageXML files."
version = "5.0.0"
readme = "README.md"
keywords = ["PageXML", "XML", "OCR", "optical character recognition"]
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = ["lxml ~= 6.0.2"]

authors = [
    { name = "jahtz", email = "jahtz.dev@proton.me" }
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
]

[project.urls]
Repository = "https://github.com/jahtz/pypxml"
Documentation = "https://github.com/jahtz/pypxml/tree/main/docs"

[project.optional-dependencies]
cli = ["click >= 8.0", "rich >= 14.0.0"]
dev = ["pytest", "pytest-cov"]

[project.scripts]
pypxml = "cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pypxml = ["py.typed"]
