[project]
name = "pypxml"
version = "5.1.0"
description = "A modern, powerful,and extremly fast Python library for reading, writing, and modifying PAGE-XML files."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
keywords = ["PageXML", "XML", "OCR", "optical character recognition"]
authors = [
    { name = "jahtz", email = "jahtz.dev@proton.me" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
]
requires-python = ">=3.11"
dependencies = [
    "lxml ~= 6.0.2"
]

[project.optional-dependencies]
cli = ["click >= 8.0", "rich >= 14.0.0"]
dev = ["types-lxml"]

[project.urls]
Homepage = "https://www.uni-wuerzburg.de/zpd/"
Repository = "https://github.com/jahtz/pypxml"
Documentation = "https://github.com/jahtz/pypxml/README.md"
Issues = "https://github.com/jahtz/pypxml/issues"

[project.scripts]
pypxml = "pypxml.cli:main"

[tool.setuptools.package-data]
pypxml = ["py.typed"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
